--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="da">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,8 +9,41 @@
 
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
 
-    
+<body>
+    <header class="siteHeader">
+        <div class="siteHeader__containerImg">
+            <img class="siteHeader__img"
+                src="./assets/images/143540_6436_28fc991da9f04193a8c6416c53eb153a_original.jpeg"
+                alt="Et billede af Ole Hall i sort og hvid">
+            <h1 class="siteHeader__title">Ole Hall</h1>
+            <h2 class="siteHeader__subtext">Forfatter & erhvervsjournalist</h2>
+        </div>
+        <nav class="primaryNav">
+            <menu class="primaryNav__menu">
+                <div class="primaryNav__div">
+                    <li class="primaryNav__menuItem"><a href="#" class="primaryNav__link">Kasi-Jespers kamp</a></li>
+                    <li class="primaryNav__menuItem"><a href="#" class="primaryNav__link">Bitcoin-bedraget</a></li>
+                    <li class="primaryNav__menuItem"><a href="#" class="primaryNav__link">Elon Musk</a></li>
+                </div>
+                <div class="primaryNav__div">
+                    <li class="primaryNav__menuItem"><a href="#" class="primaryNav__link-right">Bøger</a></li>
+                    <li class="primaryNav__menuItem"><a href="#" class="primaryNav__link-right">Om</a></li>
+                    <li class="primaryNav__menuItem"><a href="#" class="primaryNav__link-right">Kontakt</a></li>
+                </div>
+            </menu>
+        </nav>
+    </header>
+<main>
+    <section>
+        <article class="frontpage__news">
+            <h3 class="news__title" >Nyhed - kommer snart!</h3>
+           <p class="news__text">Snart udkommer Ole Halls bog omkring Elon Musk glæd dig! Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur provident atque sunt minus unde? Mollitia, placeat veritatis quaerat quas autem ab et. Ullam qui ea iusto quis omnis, odio nostrum! Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus animi beatae ducimus rem error facilis exercitationem ipsa modi consequuntur similique ratione, nemo praesentium nam! Nihil cum asperiores quas commodi at.</p>
+        </article>
+
+    </section>
+</main>
+
 </body>
+
 </html>
