finish news section + add placeholder for slider

--- a/index.html
+++ b/index.html
@@ -35,13 +35,16 @@
         </nav>
     </header>
 <main>
-    <section>
         <article class="frontpage__news">
             <h3 class="news__title" >Nyhed - kommer snart!</h3>
-           <p class="news__text">Snart udkommer Ole Halls bog omkring Elon Musk glæd dig! Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur provident atque sunt minus unde? Mollitia, placeat veritatis quaerat quas autem ab et. Ullam qui ea iusto quis omnis, odio nostrum! Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus animi beatae ducimus rem error facilis exercitationem ipsa modi consequuntur similique ratione, nemo praesentium nam! Nihil cum asperiores quas commodi at.</p>
+           <p class="news__text">Snart udkommer Ole Halls bog omkring Elon Musk glæd dig!
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur provident atque sunt minus unde? Mollitia, placeat veritatis quaerat quas autem ab et. Ullam qui ea iusto quis omnis, odio nostrum! Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus animi beatae ducimus rem error facilis exercitationem ipsa modi consequuntur similique ratione, nemo praesentium nam! Nihil cum asperiores quas commodi at.</p>
+            <a href="#"><button class="news__button"><p>Læs mere her</p></button></a>
         </article>
-
-    </section>
+   
+    <div class="frontpage__slider">
+        <img src="https://placehold.co/520x320" alt="placeholder image">
+    </div>
 </main>
 
 </body>
