finish cards + start hero

--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
 <body>
     <header class="siteHeader">
         <div class="siteHeader__containerImg">
-            <img class="siteHeader__img"
-                src="./assets/images/143540_6436_28fc991da9f04193a8c6416c53eb153a_original.jpeg"
+            <img class="siteHeader__img" src="./assets/images/ole+headshot.jpg"
                 alt="Et billede af Ole Hall i sort og hvid">
             <h1 class="siteHeader__title">Ole Hall</h1>
             <h2 class="siteHeader__subtext">Forfatter & erhvervsjournalist</h2>
@@ -34,18 +33,86 @@
             </menu>
         </nav>
     </header>
-<main>
-        <article class="frontpage__news">
-            <h3 class="news__title" >Nyhed - kommer snart!</h3>
-           <p class="news__text">Snart udkommer Ole Halls bog omkring Elon Musk glæd dig!
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur provident atque sunt minus unde? Mollitia, placeat veritatis quaerat quas autem ab et. Ullam qui ea iusto quis omnis, odio nostrum! Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus animi beatae ducimus rem error facilis exercitationem ipsa modi consequuntur similique ratione, nemo praesentium nam! Nihil cum asperiores quas commodi at.</p>
-            <a href="#"><button class="news__button"><p>Læs mere her</p></button></a>
-        </article>
-   
-    <div class="frontpage__slider">
-        <img src="https://placehold.co/520x320" alt="placeholder image">
-    </div>
-</main>
+    <main>
+        <div class="frontpage__newsSliderContainer">
+            <article class="frontpage__news">
+                <h3 class="news__title">Nyhed - kommer snart!</h3>
+                <p class="news__text">Snart udkommer Ole Halls bog omkring Elon Musk glæd dig!
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur provident atque sunt minus unde?
+                    Mollitia, placeat veritatis quaerat quas autem ab et. Ullam qui ea iusto quis omnis, odio nostrum!
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus animi beatae ducimus rem error
+                    facilis exercitationem ipsa modi consequuntur similique ratione, nemo praesentium nam! Nihil cum
+                    asperiores quas commodi at.</p>
+                <a href="#"><button class="news__button">
+                        <p>Læs mere her</p>
+                    </button></a>
+            </article>
+
+            <div class="frontpage__slider">
+                <img src="https://placehold.co/520x320" alt="placeholder image">
+            </div>
+        </div>
+        <div class="frontpage__cardsContainer">
+            <div class="frontpage__cards">
+                <img class="frontpage__cardsImg" src="./assets/images/kasi-jespers-kamp-cover.jpg"
+                    alt="forsiden til bogen Kasi-Jespers kamp">
+                <h3 class="frontpage__cardsTitle">Kasi-Jespers kamp</h3>
+                <p class="frontpage__cardsType">bog</p>
+                <p class="frontpage__cardsText">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maxime, culpa?
+                    Deserunt optio eius expedita sequi voluptatibus esse officia nulla eos accusantium ullam, voluptates
+                    libero fugit!</p>
+                <a href="#"><button class="cards__button">
+                        <p class="cards__buttonText">Læs mere her</p>
+                    </button></a>
+            </div>
+            <div class="frontpage__cards">
+                <img class="frontpage__cardsImg" src="./assets/images/bitcoin-bedraget-full.jpeg"
+                    alt="billedegrafik af bitcoin bedraget">
+                <h3 class="frontpage__cardsTitle">Bitcoin-bedraget</h3>
+                <p class="frontpage__cardsType">podcast</p>
+                <p class="frontpage__cardsText">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maxime, culpa?
+                    Deserunt optio eius expedita sequi voluptatibus esse officia nulla eos accusantium ullam, voluptates
+                    libero fugit!</p>
+                <a href="#"><button class="cards__button">
+                        <p class="cards__buttonText">Læs mere her</p>
+                    </button></a>
+
+            </div>
+            <div class="frontpage__cards">
+                <img class="frontpage__cardsImg" src="./assets/images/pandora-cover.jpg"
+                    alt="forsiden til bogen Pandora">
+                <h3 class="frontpage__cardsTitle">Pandora <span class="frontpage__cardsH3--pandora">- Danmarks største
+                        væksteventyr</span></h3>
+                <p class="frontpage__cardsType">bog</p>
+                <p class="frontpage__cardsText">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maxime, culpa?
+                    Deserunt optio eius expedita sequi voluptatibus esse officia nulla eos accusantium ullam, voluptates
+                    libero fugit!</p>
+                <a href="#"><button class="cards__button">
+                        <p class="cards__buttonText">Læs mere her</p>
+                    </button></a>
+            </div>
+        </div>
+
+        <section class="frontpage__heroContainer">
+
+            <img class="hero__img" src="https://placehold.co/350x320" alt="placeholder">
+            <div class="hero__textContainer">
+                <h3 class="frontpage__heroTitle">Om Ole Hall</h3>
+                <p class="hero__text">Ole Hall er en prisvindende dansk journalist, som er ansat i DR Nyheder, hvor han
+                    dækker økonomi og erhvervsliv for P1 Morgen og P1 Orientering. Ole Hall bidrager også til TV Avisen,
+                    Radioavisen, Genstart, Tiden og dr.dk. Før han i 2015 kom til DR, har han været skrivende journalist
+                    på bl.a. Berlingske, Jyllands-Posten og Altinget.dk. For sit journalistiske arbejde har Ole Hall modtaget flere nomineringer og priser - bl.a. har han modtaget EU-Komissionens Europæiske journalistpris
+                </p>
+                <a href="#"><button class="hero__button">
+                        <p class="hero__buttonText">Læs mere her</p>
+                    </button></a>
+            </div>
+
+
+        </section>
+
+
+    </main>
 
 </body>
 
