--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Indie projekt</title>
-
+    <script src="https://kit.fontawesome.com/2946442f60.js" crossorigin="anonymous" defer></script> 
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -136,7 +136,7 @@
     <footer>
         <img class="footer__svg" src="./assets/images/footer-wave.svg" alt="bølgende farve der går ned i footeren">
         <div class="footer__container">
-            <menu>
+            <menu class="footer__menu">
                 <h3 class="footer__linksTitle">Links</h3>
                 <li class="footer__links"><a href="#">Om Ole Hall</a></li>
                 <li class="footer__links"><a href="#">Kontakt</a></li>
@@ -146,6 +146,12 @@
                 <li class="footer__links"><a href="#">Ryanair - Flyselskabet mange hader - men alligevel flyver med</a>
                 </li>
             </menu>
+            <div class="footer__socials">
+                <a href="#"><i class="fa-brands fa-linkedin" style="color: #000000;"></i></a>
+                <a href="#"><i class="fa-brands fa-square-twitter" style="color: #000000;"></i></a>
+            </div>
+
+            <div class="footer__contactContainer">
             <h3 class="footer__contactTitle">Kontakt formular</h3>
             <form class="footer__form" action="./tak.html" novalidate>
                 <div class="form__field">
@@ -181,10 +187,10 @@
                     <button class="form__submitButton" type="submit">Send</button>
                 </div>
             </form>
-           
         </div>
-        <p class="footer__copyright">copyright Ole Hall - forfatter og erhvervsjournalist 2023
-            website af Silje Paldrup</p>
+    </div>
+        <p class="footer__copyright">© Copyright Ole Hall - Forfatter og Erhvervsjournalist 2023.
+            Website af Silje Paldrup</p>
     </footer>
 
 </body>
