finish bitcoin page + create all html files

--- a/index.html
+++ b/index.html
@@ -13,22 +13,23 @@
 <body>
     <header class="siteHeader">
         <div class="siteHeader__containerImg">
-            <img class="siteHeader__img" src="./assets/images/ole+headshot.jpg"
-                alt="Et billede af Ole Hall i sort og hvid">
-            <h1 class="siteHeader__title">Ole Hall</h1>
+            <a href="./index.html" class="siteheader__frontpageLink">
+                <img class="siteHeader__img" src="./assets/images/ole+headshot.jpg"
+                    alt="Et billede af Ole Hall i sort og hvid">
+                <h1 class="siteHeader__title">Ole Hall</h1></a>
             <h2 class="siteHeader__subtext">Forfatter & erhvervsjournalist</h2>
         </div>
         <nav class="primaryNav">
             <menu class="primaryNav__menu">
                 <div class="primaryNav__div">
-                    <li class="primaryNav__menuItem"><a href="#" class="primaryNav__link">Kasi-Jespers kamp</a></li>
-                    <li class="primaryNav__menuItem"><a href="#" class="primaryNav__link">Bitcoin-bedraget</a></li>
-                    <li class="primaryNav__menuItem"><a href="#" class="primaryNav__link">Elon Musk</a></li>
+                    <li class="primaryNav__menuItem"><a href="./kasi-jesper.html" class="primaryNav__link">Kasi-Jespers kamp</a></li>
+                    <li class="primaryNav__menuItem"><a href="./bitcoin.html" class="primaryNav__link">Bitcoin-bedraget</a></li>
+                    <li class="primaryNav__menuItem"><a href="./elon-musk.html" class="primaryNav__link">Elon Musk</a></li>
                 </div>
                 <div class="primaryNav__div">
-                    <li class="primaryNav__menuItem"><a href="#" class="primaryNav__link-right">Bøger</a></li>
-                    <li class="primaryNav__menuItem"><a href="#" class="primaryNav__link-right">Om</a></li>
-                    <li class="primaryNav__menuItem"><a href="#" class="primaryNav__link-right">Kontakt</a></li>
+                    <li class="primaryNav__menuItem"><a href="./books.html" class="primaryNav__link-right">Bøger</a></li>
+                    <li class="primaryNav__menuItem"><a href="./about.html" class="primaryNav__link-right">Om</a></li>
+                    <li class="primaryNav__menuItem"><a href="./contact.html" class="primaryNav__link-right">Kontakt</a></li>
                 </div>
             </menu>
         </nav>
