start reviews + links to articles on pages

--- a/bitcoin.html
+++ b/bitcoin.html
@@ -74,11 +74,14 @@
                                 alt="podimo logo"></a>
                     </div>
             </div>
-        </div>
+            </div>z
             <img class="bitcoin__articleImg" src="./assets/images/bitcoin-bedraget-orginal.jpeg"
                 alt="Bitcoin-bedraget logo">
                
         </article>
+
+
+
     </main>
 
     <footer>
