--- a/kasi-jesper.html
+++ b/kasi-jesper.html
@@ -16,28 +16,122 @@
             <a href="./index.html" class="siteheader__frontpageLink">
                 <img class="siteHeader__img" src="./assets/images/ole+headshot.jpg"
                     alt="Et billede af Ole Hall i sort og hvid">
-                <h1 class="siteHeader__title">Ole Hall</h1></a>
+                <h1 class="siteHeader__title">Ole Hall</h1>
+            </a>
             <h2 class="siteHeader__subtext">Forfatter & erhvervsjournalist</h2>
         </div>
         <nav class="primaryNav">
             <menu class="primaryNav__menu">
                 <div class="primaryNav__div">
-                    <li class="primaryNav__menuItem"><a href="./kasi-jesper.html" class="primaryNav__link kasijesper__headerLink">Kasi-Jespers kamp</a></li>
-                    <li class="primaryNav__menuItem"><a href="./bitcoin.html" class="primaryNav__link">Bitcoin-bedraget</a></li>
-                    <li class="primaryNav__menuItem"><a href="./elon-musk.html" class="primaryNav__link">Elon Musk</a></li>
+                    <li class="primaryNav__menuItem"><a href="./kasi-jesper.html"
+                            class="primaryNav__link kasijesper__headerLink">Kasi-Jespers kamp</a></li>
+                    <li class="primaryNav__menuItem"><a href="./bitcoin.html"
+                            class="primaryNav__link">Bitcoin-bedraget</a></li>
+                    <li class="primaryNav__menuItem"><a href="./elon-musk.html" class="primaryNav__link">Elon Musk</a>
+                    </li>
                 </div>
                 <div class="primaryNav__div">
-                    <li class="primaryNav__menuItem"><a href="./books.html" class="primaryNav__link-right">Bøger</a></li>
+                    <li class="primaryNav__menuItem"><a href="./books.html" class="primaryNav__link-right">Bøger</a>
+                    </li>
                     <li class="primaryNav__menuItem"><a href="./about.html" class="primaryNav__link-right">Om</a></li>
-                    <li class="primaryNav__menuItem"><a href="./contact.html" class="primaryNav__link-right">Kontakt</a></li>
+                    <li class="primaryNav__menuItem"><a href="./contact.html" class="primaryNav__link-right">Kontakt</a>
+                    </li>
                 </div>
             </menu>
         </nav>
     </header>
-<main>
+    <main>
+        <article class="kasijesper__article">
+            <div class="kasijesper__articleTextContainer">
+                <h2 class="kasijesper__title">Kasi-Jespers Kamp</h2>
+                <h4 class="kasijesper__subheading">Om bogen</h4>
+                <p class="kasijesper__bodyText">Jesper "Kasi" Nielsen tog turen fra anonym tankpasser på Vestegnen til
+                    kulørt rigmand med pragtvillaer på Mallorca, privatjet, bodyguard og historisk store investeringer i
+                    sportsklubber. Men da pressen og skattemyndighederne begyndte at granske hans virksomheder, sluttede
+                    eventyret brat. Formuen, statussymbolerne og konen forsvandt, mens Jesper "Kasi" Nielsen blev
+                    nedlagt af statsmagten, der forsøgte at erklære ham personligt konkurs.
 
-her skal der stå noget om kasijesper
-</main>
+                    Kasi-Jespers Kamp er historien om faldet fra tinderne og forsøget på at rejse sig fra sit livs
+                    største krise ved at bygge nye virksomheder og indlede et omfattende opgør med statsmagten. Det er
+                    en beretning om viljestyrke, ære, magt og afmagt i en verden, hvor millionbeløbene aldrig bliver
+                    store nok. Både hovedpersonen selv, kritikere og støtter har bidraget med interviews til bogen, der
+                    skildrer en presset, men også ukuelig iværksætter, der går langt for at nå sine mål.
+                </p>
+
+                <div class="kasijesper__buttonContainer">
+                    <a href="https://www.saxo.com/dk/kasi-jespers-kamp_ole-hall_haeftet_9788702268591"><button
+                            class="kasijesper__button">
+                            <p class="kasijesper__buttonText">Køb bogen her</p>
+                        </button></a>
+                </div>
+            </div>
+            <img class="kasijesper__articleImg" src="./assets/images/kasi-jesper-full-image.jpeg"
+                alt="Cover af Kasi-Jespers kamp">
+        </article>
+
+        <section class="kasijesper__review">
+            <div class="kasijesper__reviewBox">
+                <p class="kasijesper__reviewText">Tegner et nuanceret og kritisk portræt af en forrygende sælger.</p>
+                <i class="fa-solid fa-heart" style="color: #cc0000;"></i>
+                <i class="fa-solid fa-heart" style="color: #cc0000;"></i>
+                <i class="fa-solid fa-heart" style="color: #cc0000;"></i>
+                <i class="fa-solid fa-heart" style="color: #cc0000;"></i>
+                <i class="fa-regular fa-heart" style="color: #cc0000;"></i>
+                <i class="fa-regular fa-heart" style="color: #cc0000;"></i>
+                <p class="kasijesper__reviewTextAuthor">Politiken</p>
+            </div>
+            <div class="kasijesper__reviewBox">
+                <p class="kasijesper__reviewText">Underholdende læsning (...) historien er fascinerende.</p>
+                <i class="fa-solid fa-star" style="color: #000000;"></i>
+                <i class="fa-solid fa-star" style="color: #000000;"></i>
+                <i class="fa-solid fa-star" style="color: #000000;"></i>
+                <i class="fa-solid fa-star" style="color: #000000;"></i>
+                <i class="fa-solid fa-star" style="color: #000000;"></i>
+                <i class="fa-regular fa-star" style="color: #000000;"></i>
+                <p class="kasijesper__reviewTextAuthor">Børsen</p>
+            </div>
+            <div class="kasijesper__reviewBox">
+                <p class="kasijesper__reviewText">Et spændende portræt af en sælger med stort S.
+                </p>
+                <i class="fa-solid fa-star" style="color: #000000;"></i>
+                <i class="fa-solid fa-star" style="color: #000000;"></i>
+                <i class="fa-solid fa-star" style="color: #000000;"></i>
+                <i class="fa-solid fa-star" style="color: #000000;"></i>
+                <i class="fa-solid fa-star" style="color: #000000;"></i>
+                <i class="fa-regular fa-star" style="color: #000000;"></i>
+                <p class="kasijesper__reviewTextAuthor">InsideBusiness</p>
+            </div>
+        </section>
+
+        <section class="kasijesper__media">
+            <h4 class="kasijesper__mediaTitle">Artikler og podcasts om bogen </h4>
+            <div class="genstart__container">
+            <a class="media__link" href="https://www.dr.dk/lyd/special-radio/genstart/genstart-dr-s-nyhedspodcast-89"><img
+                    class="kasijesper__mediaGenstart" src="./assets/images/genstart-podcast-logo.jpeg"
+                    alt="Genstart podcast logo">
+                <p class="kasijesper__mediaText">Kasi-Jesper crash eller Kasi-Jesper comeback?</p>
+            </a>
+        </div>
+        <div class="tv2__container">
+            <a class="media__link" href="https://nyheder.tv2.dk/video/bGFzaF9rYXNpdHp0MDEwMzE5"><img class="kasijesper__mediaTV2" src="./assets/images/TV_2_RGB.svg" alt="tv2 logo"><p class="kasijesper__mediaText">Forfatter til bog om 'Kasi-Jesper': "Ville være forkert at bortcensurere."</p></a>
+        </div>
+
+        <div class="bt__container">
+            <a class="media__link" href="https://www.bt.dk/erhverv/milliardaer-ryster-paa-hovedet-over-kasi-jesper-det-kan-man-bare-ikke"><img class="kasijesper__mediaBT" src="./assets/images/B.T._-_LOGO.svg" alt="BT logo"><p class="kasijesper__mediaText">Milliardær ryster på hovedet over 'Kasi-Jesper': Det kan man bare ikke</p></a>
+        </div>
+
+        <div class="eb__container">
+            <a class="media__link" href="https://ekstrabladet.dk/nyheder/samfund/kasi-jesper-langer-ud-efter-forfatter-hans-bog-er-makvaerk/7538150"><img class="kasijesper__mediaEB" src="./assets/images/ekstra-bladet.svg" alt="Ekstra Bladet logo"><p class="kasijesper__mediaText">Kasi-Jesper langer ud efter forfatter: "Hans bog er makværk"</p></a>
+        </div>
+
+        <div class="bt__container">
+            <a class="media__link" href="https://www.bt.dk/erhverv/forfatter-svarer-igen-paa-kasi-kritik-det-var-ikke-sagt-i-sjov"><img class="kasijesper__mediaBT" src="./assets/images/B.T._-_LOGO.svg" alt="BT logo"><p class="kasijesper__mediaText">Forfatter svarer igen på Kasi-kritik: "Det var ikke sagt i sjov".</p></a>
+        </div>
+        
+
+        </section>
+
+    </main>
 
     <footer>
         <img class="footer__svg" src="./assets/images/footer-wave.svg" alt="bølgende farve der går ned i footeren">
