start Ryanair, pandora and Books HTMLpgs(and css)

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         </div>
         <div class="frontpage__cardsContainer">
             <div class="frontpage__cards">
-                <img class="frontpage__cardsImg" src="./assets/images/kasi-jespers-kamp-cover.jpg"
+                <img class="frontpage__cardsImg" src="./assets/images/nycrop-kasi.jpeg"
                     alt="forsiden til bogen Kasi-Jespers kamp">
                 <h3 class="frontpage__cardsTitle">Kasi-Jespers kamp</h3>
                 <p class="frontpage__cardsType">bog</p>
@@ -80,7 +80,7 @@
 
             </div>
             <div class="frontpage__cards">
-                <img class="frontpage__cardsImg" src="./assets/images/pandora-cover.jpg"
+                <img class="frontpage__cardsImg" src="./assets/images/pandora-cover.png"
                     alt="forsiden til bogen Pandora">
                 <h3 class="frontpage__cardsTitle">Pandora <span class="frontpage__cardsH3--pandora">- Danmarks største
                         væksteventyr</span></h3>
@@ -93,6 +93,7 @@
                     </button></a>
             </div>
         </div>
+
 
         <section class="frontpage__heroContainer">
             <img class="hero__img" src="./assets/images/ole-hall-full.jpeg"
