--- a/pandora.html
+++ b/pandora.html
@@ -24,14 +24,14 @@
             <menu class="primaryNav__menu">
                 <div class="primaryNav__div">
                     <li class="primaryNav__menuItem"><a href="./kasi-jesper.html"
-                            class="primaryNav__link kasijesper__headerLink">Kasi-Jespers kamp</a></li>
+                            class="primaryNav__link">Kasi-Jespers kamp</a></li>
                     <li class="primaryNav__menuItem"><a href="./bitcoin.html"
                             class="primaryNav__link">Bitcoin-bedraget</a></li>
                     <li class="primaryNav__menuItem"><a href="./elon-musk.html" class="primaryNav__link">Elon Musk</a>
                     </li>
                 </div>
                 <div class="primaryNav__div">
-                    <li class="primaryNav__menuItem"><a href="./books.html" class="primaryNav__link-right">Bøger</a>
+                    <li class="primaryNav__menuItem books__headerLink"><a href="./books.html" class="primaryNav__link-right">Bøger</a>
                     </li>
                     <li class="primaryNav__menuItem"><a href="./about.html" class="primaryNav__link-right">Om</a></li>
                     <li class="primaryNav__menuItem"><a href="./contact.html" class="primaryNav__link-right">Kontakt</a>
@@ -41,95 +41,62 @@
         </nav>
     </header>
     <main>
-        <article class="kasijesper__article">
-            <div class="kasijesper__articleTextContainer">
-                <h2 class="kasijesper__title">Kasi-Jespers Kamp</h2>
-                <h4 class="kasijesper__subheading">Om bogen</h4>
-                <p class="kasijesper__bodyText">Jesper "Kasi" Nielsen tog turen fra anonym tankpasser på Vestegnen til
-                    kulørt rigmand med pragtvillaer på Mallorca, privatjet, bodyguard og historisk store investeringer i
-                    sportsklubber. Men da pressen og skattemyndighederne begyndte at granske hans virksomheder, sluttede
-                    eventyret brat. Formuen, statussymbolerne og konen forsvandt, mens Jesper "Kasi" Nielsen blev
-                    nedlagt af statsmagten, der forsøgte at erklære ham personligt konkurs.
+        <article class="pandora__article">
+            <div class="pandora__articleTextContainer">
+                <h2 class="pandora__title">PANDORA - Danmarks vildeste væksteventyr</h2>
+                <h4 class="pandora__subheading">Om bogen</h4>
+                <p class="pandora__bodyText">“Vi vil basalt set bygge en virksomhed op på 10 år, som det tog LEGO 100 år at bygge. Det er relativt ambitiøst”.Sådan sagde Pandoras topchef, Mikkel Vendelin Olesen, på et internt seminar for selskabets øverste ledelse i 2009. Året inden havde kapitalfonden Axcel købt 60 procent af Pandora, og nu var man ved at forberede den børsintroduktion, der skulle komme til at forgylde ejerne – og kort efter koste investorer milliarder af kroner.</p>
+                <p class="pandora__bodyText">PANDORA er historien om en lille virksomhed på den københavnske vestegn, der forvandlede sig til en magtfaktor i den globale smykkeindustri. På få år skabte bl.a. Per Enevoldsen, Jesper "Kasi" Nielsen og Karin Adcock skyhøje vækstrater og enorme overskud, mens de indtog USA, Tyskland og Australien med deres berømte charmsarmbånd og byggede verdens største smykkefabrik i Thailand. Da Danmarks største kapitalfond købte Pandora og gennemførte en succesfuld børsnotering, blev Pandoras kultur udfordret og nøglepersoner sat ud af spillet. Alvorlige fejlbeslutninger fik aktiekursen til at dykke med 65 procent på en enkelt dag, før ejerne fik gennemført en spektakulær turn-around, så Pandora kom tilbage i bedre form end nogensinde. Selskabet er i dag 50 mia. kroner værd. PANDORA er den hæsblæsende fortælling om driftige og uortodokse iværksættere, om en kapitalfond, der tænker stort, og om en rutsjetur på aktiemarkedet, der sjældent er set magen til i Danmark.</p>
 
-                    Kasi-Jespers Kamp er historien om faldet fra tinderne og forsøget på at rejse sig fra sit livs
-                    største krise ved at bygge nye virksomheder og indlede et omfattende opgør med statsmagten. Det er
-                    en beretning om viljestyrke, ære, magt og afmagt i en verden, hvor millionbeløbene aldrig bliver
-                    store nok. Både hovedpersonen selv, kritikere og støtter har bidraget med interviews til bogen, der
-                    skildrer en presset, men også ukuelig iværksætter, der går langt for at nå sine mål.
-                </p>
-
-                <div class="kasijesper__buttonContainer">
-                    <a href="https://www.saxo.com/dk/kasi-jespers-kamp_ole-hall_haeftet_9788702268591"><button
-                            class="kasijesper__button">
-                            <p class="kasijesper__buttonText">Køb bogen her</p>
+                <div class="pandora__buttonContainer">
+                    <a href="https://www.saxo.com/dk/pandora_ole-hall_epub_9788771590845"><button
+                            class="pandora__button">
+                            <p class="pandora__buttonText">Køb bogen her</p>
                         </button></a>
                 </div>
             </div>
-            <img class="kasijesper__articleImg" src="./assets/images/kasi-jesper-full-image copy.jpeg"
-                alt="Cover af Kasi-Jespers kamp">
+            <img class="pandora__articleImg" src="./assets/images/pandora-full-cover.jpeg"
+                alt="Cover af Pandora - Danmarks vildeste væksteventyr">
         </article>
 
-        <section class="kasijesper__review">
-            <div class="kasijesper__reviewBox">
-                <p class="kasijesper__reviewText">"Tegner et nuanceret og kritisk portræt af en forrygende sælger."</p>
+        <section class="pandora__review">
+            <div class="pandora__reviewBox">
+                <p class="pandora__reviewText">"Velskrevet som en krimi fra det virkelige liv"</p>
+                <i class="fa-solid fa-heart" style="color: #cc0000;"></i>
                 <i class="fa-solid fa-heart" style="color: #cc0000;"></i>
                 <i class="fa-solid fa-heart" style="color: #cc0000;"></i>
                 <i class="fa-solid fa-heart" style="color: #cc0000;"></i>
                 <i class="fa-solid fa-heart" style="color: #cc0000;"></i>
                 <i class="fa-regular fa-heart" style="color: #cc0000;"></i>
-                <i class="fa-regular fa-heart" style="color: #cc0000;"></i>
-                <p class="kasijesper__reviewTextAuthor">Politiken</p>
+                <p class="pandora__reviewTextAuthor">Politiken</p>
             </div>
-            <div class="kasijesper__reviewBox">
-                <p class="kasijesper__reviewText">"Underholdende læsning (...) historien er fascinerende."</p>
+            <div class="pandora__reviewBox">
+                <p class="pandora__reviewText">"Forfatteren trækker på sin viden fra de år, han har fulgt virksomheden"</p>
                 <i class="fa-solid fa-star" style="color: #000000;"></i>
                 <i class="fa-solid fa-star" style="color: #000000;"></i>
                 <i class="fa-solid fa-star" style="color: #000000;"></i>
                 <i class="fa-solid fa-star" style="color: #000000;"></i>
                 <i class="fa-solid fa-star" style="color: #000000;"></i>
                 <i class="fa-regular fa-star" style="color: #000000;"></i>
-                <p class="kasijesper__reviewTextAuthor">Børsen</p>
+                <p class="pandora__reviewTextAuthor">Jyllands-Posten</p>
             </div>
-            <div class="kasijesper__reviewBox">
-                <p class="kasijesper__reviewText">"Et spændende portræt af en sælger med stort S."
+            <div class="pandora__reviewBox">
+                <p class="pandora__reviewText">"Ole Hall tegner et stramt portræt af selskabets ufattelige udvikling"
                 </p>
                 <i class="fa-solid fa-star" style="color: #000000;"></i>
                 <i class="fa-solid fa-star" style="color: #000000;"></i>
                 <i class="fa-solid fa-star" style="color: #000000;"></i>
                 <i class="fa-solid fa-star" style="color: #000000;"></i>
-                <i class="fa-solid fa-star" style="color: #000000;"></i>
                 <i class="fa-regular fa-star" style="color: #000000;"></i>
-                <p class="kasijesper__reviewTextAuthor">InsideBusiness</p>
+                <i class="fa-regular fa-star" style="color: #000000;"></i>
+                <p class="pandora__reviewTextAuthor">Berlingske</p>
             </div>
         </section>
 
-        <section class="kasijesper__media">
-            <h4 class="kasijesper__mediaTitle">Artikler og podcasts om bogen </h4>
-            <div class="genstart__container">
-            <a class="media__link" href="https://www.dr.dk/lyd/special-radio/genstart/genstart-dr-s-nyhedspodcast-89"><img
-                    class="kasijesper__mediaGenstart" src="./assets/images/genstart-podcast-logo.jpeg"
-                    alt="Genstart podcast logo">
-                <p class="kasijesper__mediaText">Kasi-Jesper crash eller Kasi-Jesper comeback?</p>
-            </a>
-        </div>
-        <div class="tv2__container">
-            <a class="media__link" href="https://nyheder.tv2.dk/video/bGFzaF9rYXNpdHp0MDEwMzE5"><img class="kasijesper__mediaTV2" src="./assets/images/TV_2_RGB.svg" alt="tv2 logo"><p class="kasijesper__mediaText">Forfatter til bog om 'Kasi-Jesper': "Ville være forkert at bortcensurere."</p></a>
-        </div>
-
-        <div class="bt__container">
-            <a class="media__link" href="https://www.bt.dk/erhverv/milliardaer-ryster-paa-hovedet-over-kasi-jesper-det-kan-man-bare-ikke"><img class="kasijesper__mediaBT" src="./assets/images/B.T._-_LOGO.svg" alt="BT logo"><p class="kasijesper__mediaText">Milliardær ryster på hovedet over 'Kasi-Jesper': Det kan man bare ikke</p></a>
-        </div>
-
-        <div class="eb__container">
-            <a class="media__link" href="https://ekstrabladet.dk/nyheder/samfund/kasi-jesper-langer-ud-efter-forfatter-hans-bog-er-makvaerk/7538150"><img class="kasijesper__mediaEB" src="./assets/images/ekstra-bladet.svg" alt="Ekstra Bladet logo"><p class="kasijesper__mediaText">Kasi-Jesper langer ud efter forfatter: "Hans bog er makværk"</p></a>
-        </div>
-
-        <div class="bt__container">
-            <a class="media__link" href="https://www.bt.dk/erhverv/forfatter-svarer-igen-paa-kasi-kritik-det-var-ikke-sagt-i-sjov"><img class="kasijesper__mediaBT" src="./assets/images/B.T._-_LOGO.svg" alt="BT logo"><p class="kasijesper__mediaText">Forfatter svarer igen på Kasi-kritik: "Det var ikke sagt i sjov".</p></a>
-        </div>
-        
-
+        <section class="pandora__media">
+            <h4 class="pandora__mediaTitle">Artikler og podcasts om bogen </h4>
         </section>
+            
 
     </main>
 
