--- a/ryanair.html
+++ b/ryanair.html
@@ -23,16 +23,16 @@
         <nav class="primaryNav">
             <menu class="primaryNav__menu">
                 <div class="primaryNav__div">
-                    <li class="primaryNav__menuItem"><a href="./kasi-jesper.html" class="primaryNav__link">Kasi-Jespers
-                            kamp</a></li>
+                    <li class="primaryNav__menuItem"><a href="./kasi-jesper.html"
+                            class="primaryNav__link">Kasi-Jespers kamp</a></li>
                     <li class="primaryNav__menuItem"><a href="./bitcoin.html"
                             class="primaryNav__link">Bitcoin-bedraget</a></li>
                     <li class="primaryNav__menuItem"><a href="./elon-musk.html" class="primaryNav__link">Elon Musk</a>
                     </li>
                 </div>
                 <div class="primaryNav__div">
-                    <li class="primaryNav__menuItem"><a href="./books.html"
-                            class="primaryNav__link-right books__headerLink">Bøger</a></li>
+                    <li class="primaryNav__menuItem books__headerLink"><a href="./books.html" class="primaryNav__link-right">Bøger</a>
+                    </li>
                     <li class="primaryNav__menuItem"><a href="./about.html" class="primaryNav__link-right">Om</a></li>
                     <li class="primaryNav__menuItem"><a href="./contact.html" class="primaryNav__link-right">Kontakt</a>
                     </li>
@@ -41,64 +41,34 @@
         </nav>
     </header>
     <main>
-        <section class="books__elonmuskContainer">
-            <div class="books__elonmuskTextContainer">
+        <article class="ryanair__article">
+            <div class="ryanair__articleTextContainer">
+                <h2 class="ryanair__title">RYANAIR </h2>
+                <h3 class="ryanair__underTitle">- Flyselskabet mange hader - men stadig flyver med</h3>
+                <h4 class="ryanair__subheading">Om bogen</h4>
+                <p class="ryanair__bodyText">Michael O’Leary gjorde Ryanair til luftens svar på Aldi, og flyselskabet blev under hans ledelse Europas mest succesfulde. Ryanair har i dag flest kunder, er det mest værdifulde flyselskab i Europa og er bedst til at tjene penge. I foråret 2015 blev det københavnernes tur til at flyve med det kontroversielle, irske lavprisselskab. Men fagforeninger, politikere og konkurrenter reagerede med modstand, da Ryanair åbnede sin første rute fra Københavns Lufthavn. Ryanair vil på ingen måde tegne dansk overenskomst, men vil fortsætte brugen af kontrakt- og vikaransættelser, som af en arbejdsmarkedsforsker er blevet kaldt “slavelignende vilkår”. Dette er historien om globalisering i praksis. Om den danske model, der bliver udfordret, - og om en topchef, der med kontroversielle udtalelser og tiltag i dag er hadet af både kunder, konkurrenter og politikere. Få historien om Ryanair-ansattes arbejdsforhold, selskabets banebrydende forretningsmodel og forstå, hvorfor flyindustrien har gennemgået en revolution de seneste 20 år.</p>
 
-                <h3 class="books__elonmuskTitle">Elon Musk</h3>
-                <p class="books__elonmuskText">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iure, nam!
-                    Lorem
-                    ipsum dolor sit amet consectetur adipisicing elit. Adipisci, nisi in! Ad recusandae suscipit numquam
-                    maiores perspiciatis corporis rerum officiis?</p>
-                <div class="books__elonButtonsContainer">
-                    <a href="#"><button class="books__buttons">Køb bogen</button></a>
-                    <a href="./elon-musk.html"><button class="books__buttons">Læs mere</button></a>
+                <div class="ryanair__buttonContainer">
+                    <a href="https://www.saxo.com/dk/ryanair_ole-hal_epub_9788799742172"><button
+                            class="ryanair__button">
+                            <p class="ryanair__buttonText">Køb bogen her</p>
+                        </button></a>
                 </div>
             </div>
-            <img src="https://placehold.co/200x220" alt="placeholder">
-        </section>
+            <img class="ryanair__articleImg" src="./assets/images/ryanair-cover.png"
+                alt="Cover af RYANAIR - FLyselskabet mange hader - men stadig flyver med ">
+        </article>
 
-        <section class="books__kasijesperContainer">
-            <div class="books__kasijesperTextContainer">
-                <h3 class="books__kasijesperTitle">Kasi-Jespers Kamp</h3>
-                <p class="books__kasijesperText">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iure, nam!
-                    Lorem
-                    ipsum dolor sit amet consectetur adipisicing elit. Adipisci, nisi in! Ad recusandae suscipit numquam
-                    maiores perspiciatis corporis rerum officiis?</p>
-                <div class="books__kasiButtonsContainer">
-                    <a href="https://www.saxo.com/dk/kasi-jespers-kamp_ole-hall_haeftet_9788702268591"><button class="books__buttons">Køb bogen</button></a>
-                    <a href="./kasi-jesper.html"><button class="books__buttons">Læs mere</button></a>
-                </div>
-            </div>
-            <img src="./assets/images/kasi-jesper-books-site.jpeg" alt="placeholder">
-        </section>
 
-        <section class="books__pandoraContainer">
-            <div class="books__pandoraTextContainer">
-                <h3 class="books__pandoraTitle">Pandora - Danmarks største væksteventyr</h3>
-                <p class="books__pandoraText">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iure, nam! Lorem
-                    ipsum dolor sit amet consectetur adipisicing elit. Adipisci, nisi in! Ad recusandae suscipit numquam
-                    maiores perspiciatis corporis rerum officiis?</p>
-                <div class="books__pandoraButtonsContainer">
-                    <a href="https://www.saxo.com/dk/pandora_ole-hall_epub_9788771590845"><button class="books__buttons">Køb bogen</button></a>
-                    <a href="./pandora.html"><button class="books__buttons">Læs mere</button></a>
-                </div>
+        <section class="ryanair__media">
+            <h4 class="ryanair__mediaTitle">Artikler og podcasts om bogen </h4>
+            <div class="bt__container">
+                <a class="media__link" href="https://www.bt.dk/politik/koebenhavns-kommune-boykotter-ryanair"><img class="ryanair__mediaBT" src="./assets/images/B.T._-_LOGO.svg" alt="BT logo"><p class="ryanair__mediaText">Københavns kommune boykotter Ryanair</p></a>
             </div>
-            <img src="./assets/images/pandora-books-site.png" alt="placeholder">
         </section>
+            
 
-        <section class="books__ryanairContainer">
-            <div class="books__ryanairTextContainer">
-                <h3 class="books__ryanairTitle">Ryanair - Flyselskabet mange hader - men alligevel flyver med </h3>
-                <p class="books__ryanairText">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iure, nam! Lorem
-                    ipsum dolor sit amet consectetur adipisicing elit. Adipisci, nisi in! Ad recusandae suscipit numquam
-                    maiores perspiciatis corporis rerum officiis?</p>
-                <div class="books__ryanairButtonsContainer">
-                    <a href="https://www.saxo.com/dk/ryanair_ole-hal_epub_9788799742172"><button class="books__buttons">Køb bogen</button></a>
-                    <a href="./ryanair.html"><button class="books__buttons">Læs mere</button></a>
-                </div>
-            </div>
-            <img src="./assets/images/ryanair-books-site.png" alt="placeholder">
-        </section>
+       
 
     </main>
 
@@ -111,7 +81,7 @@
                 <li class="footer__links"><a href="#">Kontakt</a></li>
                 <li class="footer__links"><a href="#">Kasi-Jespers Kamp</a></li>
                 <li class="footer__links"><a href="#">Bitcoin-bedraget</a></li>
-                <li class="footer__links"><a href="#">Pandora - Danmarks vildeste væksteventyr</a></li>
+                <li class="footer__links"><a href="#">ryanair - Danmarks vildeste væksteventyr</a></li>
                 <li class="footer__links"><a href="#">Ryanair - Flyselskabet mange hader - men alligevel flyver med</a>
                 </li>
             </menu>
